test/zinc_source/compile_errors/operators/17_unsupported_multiplication_operator.zn
// expected-error: operator '\*' cannot be overloaded

struct Point {
    x: i64

    fn operator*(rhs) -> Self {
        return self
    }
}

fn main() {
    point = Point { x: 1 }
}
